[자동차 경주 -3,4단계] 정민주 미션 제출합니다 (#40)
* (step3) README 작성

* (step3) RacingGameService 삭제

* (step3) 서비스 구현

* (step4) 테스트코드 작성

* (step4) 코멘트반영

* (step4) 코멘트반영

* (step4) 코멘트반영